Adjust button style
- Add condition to change classes of button for styles
- Change style for operation (plus, minus, multiple, divide) keys
- Change style fot decimal in button.css

--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,4 +1,4 @@
-button {
+button, #dot {
     border: none;
     width: 95%;
     height: 95%;
@@ -6,16 +6,16 @@ button {
     font-size: larger;
 }
 
-button:hover {
+button:hover, #dot:hover {
     background-color: darkgray;
 }
 
-button:focus {
+button:focus, #dot:focus {
     outline: 2px solid blue; 
     background-color: darkgray;
 }
 
-button:active {
+button:active, #dot:active {
     background-color: grey;
 }
 
