--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,12 +1,14 @@
 .app {
   background-color: rgb(39, 40, 49);
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .mainArea {
   border: 2px solid white;
+  margin-bottom: 5vh;
 }
