Fix font size of Display

--- a/src/Components/Display/Display.css
+++ b/src/Components/Display/Display.css
@@ -9,10 +9,10 @@
     
 } 
 
-p {
+.display p {
     overflow: hidden;
     padding: 15px;
-    font-size: 2em;
+    font-size: 1.8em;
     color: whitesmoke;
     float: right;
 }
