--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,11 +1,12 @@
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
 }
 
-p {
+footer > p {
     font-size: 16px; 
     margin: 0;
+    color: white;
 }
 
 a {
